# trainHOG

./: CMakeLists.txt  build.sh  main.cpp
src/: train.cpp
